made many changes, forgot to commit:
added Post Detailview, added post create, some styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
     />
+    <link rel="stylesheet" href="stylesheets/custom.css" />
     <title>Gründerideen</title>
   </head>
-  <body></body>
+  <body>
+    <div class="ui top menu">
+      <div class="ui container">
+        <div class="ui header item">
+          Gründerideen
+        </div>
+        <a class="item" href="">Geld</a>
+        <a class="item" href="">Die besten Tools</a>
+        <a class="item" href="/posts/create">Beitrag erstellen</a>
+      </div>
+    </div>
+  </body>
 </html>
