created Edit page and made some styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,18 +8,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"
     />
-    <link rel="stylesheet" href="stylesheets/custom.css" />
+    <link rel="stylesheet" href="/stylesheets/custom.css" />
     <title>Gründerideen</title>
   </head>
   <body>
     <div class="ui top menu">
       <div class="ui container">
-        <div class="ui header item">
-          Gründerideen
-        </div>
+        <a href="/posts">
+          <div class="ui header item">
+            <i class="briefcase icon"></i>Gründerideen
+          </div></a
+        >
         <a class="item" href="">Geld</a>
         <a class="item" href="">Die besten Tools</a>
         <a class="item" href="/posts/create">Beitrag erstellen</a>
+        <a class="item right " href="/posts/create">Registrieren</a>
+        <a class="item right " href="/posts/create">Login</a>
       </div>
     </div>
   </body>
