--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,18 +12,24 @@
     <title>Gründerideen</title>
   </head>
   <body>
-    <div class="ui top menu">
+    <div class="ui top menu ">
       <div class="ui container">
         <a href="/posts">
           <div class="ui header item">
             <i class="briefcase icon"></i>Gründerideen
-          </div></a
-        >
+          </div>
+        </a>
         <a class="item" href="">Geld</a>
         <a class="item" href="">Die besten Tools</a>
         <a class="item" href="/posts/create">Beitrag erstellen</a>
-        <a class="item right " href="/posts/create">Registrieren</a>
-        <a class="item right " href="/posts/create">Login</a>
+        <div class="ui right menu borderless">
+          <a class="item" href="/posts/create"
+            ><div class="ui button basic teal">Registrieren</div></a
+          >
+          <a id="login" class="item" href="/posts/create"
+            ><div class="ui button teal">Login</div></a
+          >
+        </div>
       </div>
     </div>
   </body>
