--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -13,7 +13,11 @@
 
 .ui.right.menu.borderless {
   border: none;
-  webkit-box-shadow: none;
+  -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+}
+
+.ui.form h1 {
+  margin-top: 14px;
 }
